Avoid wrapping in menu

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -68,7 +68,7 @@
     list-style-type: none;
   }
   .header-navigation ul li {
-    margin-left: 40px;
+    margin-left: 32px;
     line-height: 72px;
     font-weight: 700;
     position: relative;
